--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "axios": "^1.3.6",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-hook-form": "^7.43.9",
+    "react-hooks-useform": "^0.1.86",
+    "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.2",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.0",
+    "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
