--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
-    "react-hooks-useform": "^0.1.86",
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.2",
+    "redux": "^4.2.1",
     "yup": "^1.1.1"
   },
   "devDependencies": {
