--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-motion": "^0.5.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "yup": "^1.1.1"
